@@ -249,7 +249,9 @@ For more FileStorage info, you can check
     ::cv::HoughLinesP matrix rho theta threshold ?minLineLength maxLineGap?
 
     ::cv::findContours matrix mode method ?offset_point_x offset_point_y?
+    ::cv::findContoursWithHierarchy matrix mode method ?offset_point_x offset_point_y?
     ::cv::drawContours matrix contours_list contourIdx color_list ?thickness lineType maxLevel offset_point_x offset_point_y?
+    ::cv::drawContoursWithHierarchy matrix contours_list contourIdx color_list thickness lineType hierarchy maxLevel ?offset_point_x offset_point_y?
     ::cv::arcLength contour closed
     ::cv::contourArea contour ?oriented?
     ::cv::boundingRect contour
